--- a/data_entry_system/src/App.css
+++ b/data_entry_system/src/App.css
@@ -1,42 +1,132 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+body {
+  font-family: "Roboto", sans-serif;
+  min-height: 100vh;
+  background: linear-gradient(180deg, #fff 50%, #bd002f 50%);
+}
+.container {
+  border: 5px solid green;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  max-width: 450px;
+  background: #222;
+  padding: 20px 30px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+}
+.container .form-title {
+  font-family: "Montserrat", sans-serif;
   text-align: center;
+  font-size: 30px;
+  font-weight: 600;
+  margin: 20px 0px 30px;
+  color: #fff;
+}
+.container .form-input {
+  margin: 10px 0px;
+}
+.container .form-input label {
+
+  display: block;
+  font-size: 15px;
+  color: #fff;
+  margin-bottom: 5px;
+}
+.container .form-input input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #888;
+  font-size: 15px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.container .form-input #date {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #888;
+  font-size: 15px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container #submit {
+  margin-top: 5px;
+  width: 100%;
+  padding: 10px;
+  border: 2px solid #e56666;
+  outline: none;
+  font-size: 15px;
+  text-transform: uppercase;
+  background: #4c81ff;
+  color: #fff;
+  cursor: pointer;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+
+
+/****************************************************************Button css****************************************************************/
+
+.glow-on-hover {
+  margin-top: 20px;
+  width: 120px;
+  height: 40px;
+  border: 2px solid red;
+  outline: none;
+  color: #fff;
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  left: 130px;
 }
 
-.card {
-  padding: 2em;
+.glow-on-hover:before {
+  content: '';
+  background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+  position: absolute;
+  top: -2px;
+  left:-2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing 20s linear infinite;
+  opacity: 0;
+  transition: opacity .3s ease-in-out;
+  border-radius: 10px;
 }
 
-.read-the-docs {
-  color: #888;
+.glow-on-hover:active {
+  color: #000
+}
+
+.glow-on-hover:active:after {
+  background: transparent;
+}
+
+.glow-on-hover:hover:before {
+  opacity: 1;
+}
+
+.glow-on-hover:after {
+  z-index: -1;
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #111;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+
+@keyframes glowing {
+  0% { background-position: 0 0; }
+  50% { background-position: 400% 0; }
+  100% { background-position: 0 0; }
 }
