--- a/data_entry_system/src/App.css
+++ b/data_entry_system/src/App.css
@@ -65,6 +65,26 @@ body {
   cursor: pointer;
 }
 
+.styled-table {
+  width: 100%;
+  border-collapse: collapse;
+  border: 1px solid #ddd;
+}
+
+.styled-table th {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+.styled-table td{
+  padding: 8px;
+  color: wheat;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+.styled-table th {
+  background-color: #f2f2f2;
+}
 
 
 /****************************************************************Button css****************************************************************/
